--- a/uVote/page/default_page/css/default_page.css
+++ b/uVote/page/default_page/css/default_page.css
@@ -3,6 +3,18 @@ body {
   padding-bottom: 40px;
 }
 
-/*#list {
+/*.list {
     border: 2px solid #ccc;
 }*/
+
+.pro{
+    background: lightgreen;
+}
+
+.contra{
+    background: lightcoral;
+}
+
+.ent{
+    background: lightgray;
+}
