multiple api functionality for statistics on fronted various style changes for buttons and bars (still bootstrap though) vote functionality restored switched list and main frame positions and reversed floats (looks same as before!)

--- a/uVote/page/default_page/css/default_page.css
+++ b/uVote/page/default_page/css/default_page.css
@@ -8,13 +8,13 @@ body {
 }*/
 
 .pro{
-    background: url(http://mojotrollz.eu/web/uVote/api.php?call=img&cat=frontend_logos&id=pro.png);
+    background: #5eb95e;
 }
 
 .contra{
-    background: url(http://mojotrollz.eu/web/uVote/api.php?call=img&cat=frontend_logos&id=contra.png)no-repeat;
+    background: #ee5f5b;
 }
 
 .ent{
-    background: url(http://mojotrollz.eu/web/uVote/api.php?call=img&cat=frontend_logos&id=enth.png)no-repeat;
+    background: lightgrey;
 }
