--- a/uVote/page/default_page/css/loginform.css
+++ b/uVote/page/default_page/css/loginform.css
@@ -1,20 +1,20 @@
 #help-block {
-    float: left; 
+    float: right; 
     padding: 0;
 }
 
 #controls {
-    float: left; 
+    float: right; 
     margin-right: 10px;
 }
 
  #controls2 {
-     float: left;
+     float: right;
      margin-right: 20px;
  }
  
 .btn btn-primary#login_submit {
-    float: left; 
+    float: right; 
     height: 32px; 
     font-size: 13px;
 }
