--- a/uvote/page/default_page/css/default_page.css
+++ b/uvote/page/default_page/css/default_page.css
@@ -1,8 +1,15 @@
 body {
   padding-bottom: 40px;
 }
-btn_logout:hover{
+#btn_logout:hover{
     cursor: pointer;
+}
+
+.row {
+    padding: 0 !important;
+    margin: 0 !important;
+    margin-top: 10px !important;
+    margin-bottom: 10px !important;
 }
 /*.list {
     border: 2px solid #ccc;
